@startuml classDiagramAggregation

class Course{
    - name : String
    - instructors : ArrayList<Instructor>
    - textbook : ArrayList<Textbook> 

    + Course(courseName : String, instructor : Instructor, textbook : Textbook)
    + setName(name : String) : void
    + setInstructors(instructor : Instructor) : void
    + setTextbooks(textbook : Textbook) : void
    + getName() : String
    + getInstructors() : ArrayList<Instructor>
    + getTextbooks() : ArrayList<Textbook>
    + printCourse() : void 
    + toString() : String
}

class Instructor{
    - firstName : String
    - lastName : String
    - officeNumber : String

    + Instructor(firstName : String, lastName : String, officeNumber : String)
    + setFirstName(firstName : String) : void
    + setLastName(lastname : String) : void
    + setOfficeNumber(officeNumber : String) : void
    + getFirstname() : String
    + getLastName() : String
    + getOfficeNumber() : String
    + toString() : String
}

class Textbook{
    - title : String
    - author : String
    - publisher : String

    + Textbook(title : String, author : String, publisher : String)
    + setTitle(title : String) : void
    + setAuthor(author : String) : void
    + setPublisher(publisher : String) : void
    + getTitle() : String
    + getAuthor() : String
    + getPublisher() : String
    + toString() : String
}

class AggregationDriver{

}

Course o-- Instructor
Course o-- Textbook
@enduml